# graphicsOnCPU

./: CMakeLists.txt  LICENSE.txt  README.md  main.cpp
GraphExamples/: GraphTest1.txt  GraphTest2.txt  GraphTest3.txt  GraphTest4.txt  GraphTest5.txt
GraphPainter/: graph.h  linker.h
GraphPainter/include/: GraphDraw.h  GraphObject.h  GraphSolver.h
GraphPainter/src/: GraphObject.cpp  GraphSolver.cpp
SaveModule/: linker.h  saveModule.h
SaveModule/include/: libbmp.cpp  libbmp.h  saveBuffer.h
graphics/: graphics.h  toRead.txt
graphics/include/: Buffer.h  Color.h  Draw.h  Font.h  GMath.h  Shapes.h  Special.h
graphics/src/: Buffer.cpp  Color.cpp
include/: Buffer.h  Color.h  Draw.h  Font.h  GMath.h  Shapes.h  Special.h  graphics.h
src/: graphics.cpp
